# monolith

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build-push-deploy  devenv.nix  flake.nix  rest.fish  settings.toml  settings.toml.example  waypoint.hcl
.github/workflows/: build-test.yaml
etc/: monolith.nomad.hcl  monolith.nomad.tpl
migrations/: 1_shortlinks.sql
src/: main.rs  notify.rs  settings.rs  shortlink.rs  svc.rs
src/svc/: homeassistant.rs  mail.rs  mod.rs
templates/: base.html  error.html
templates/shortlink/: list.html
