[package]
edition = "2021"
name = "monolith"
version = "0.1.0"
[dependencies]
anyhow = "1.0.57"
axum = "0.5.6"
lettre = { version = "0.10.0-rc.6", features = ["tokio1", "tokio1-native-tls"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["std", "fmt", "env-filter"] }
